[package]
name = "osc-booper"
version = "0.1.2"
edition = "2024"

[dependencies]
clap = { version = "4.5.34", features = ["derive"] }
dotenvy = "0.15.7"
jiff = { version = "0.2.5", features = ["serde"] }
mdns-proto = { version = "0.1.0", features = ["slab"] }
oscquery = "=0.2.0"
rand = "0.9.1"
rosc = "0.11.4"
serde = { version = "1.0.219", features = ["derive"] }
smallvec = "1.15.0"
socket2 = "0.5.9"
tokio = { version = "1", features = ["rt", "net", "rt-multi-thread", "macros", "time"] }
tokio-util = "0.7.14"
toml = "0.8.14"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["tracing-log", "env-filter"] }
